syntax = "proto3";

package cyberrc;

option go_package = "github.com/friend0/cybertx/clients/gocybertx";

// Message wrapper
message CyberRCMessage {
  enum MessageType {
    PPMUpdate = 0;
    RCData = 1;
  }
  MessageType type = 1;
  int32 channel_values_count = 2;
  bytes payload = 3;
}

// Message definition for RC data
message RCData {
  int32 Aileron = 1;
  int32 Elevator = 2;
  int32 Throttle = 3;
  int32 Rudder = 4;
  int32 Arm = 5;
  int32 Mode = 6;
}

message PPMUpdateAll {
  int32 line = 1;
  repeated int32 channel_values = 2 [ packed = true ];
}
